Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       margin-bottom: 2px;
       /* filtro para deixar o ícone em verde e com leve glow */
       filter:
-        drop-shadow(0 0 4px #39FF14)
+        drop-shadow(0 0 3px #39FF14)
         brightness(0)
         saturate(100%)
         invert(100%)
@@ -93,7 +93,7 @@
     }
     .btn span {
       font-size: 0.75em; 
-      color: #333; 
+      color: #39FF14; 
       font-weight: bold;
       margin-top: -3px;
     }
